[package]
name = "elkai-rs"
version = "0.1.1"
edition = "2021"
authors = ["HellOwhatAs"]
description = "elkai-rs - a Rust library for solving TSP problems"
readme = "README.md"
repository = "https://github.com/HellOwhatAs/elkai-rs"
license-file = "LICENSE"
keywords = ["tsp", "atsp", "salesman"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
glob = "0.3.1"

[dev-dependencies]
text_io = "0.1.12"