[package]
name = "elkai-rs"
version = "0.1.4"
edition = "2021"
authors = ["HellOwhatAs"]
description = "elkai-rs is a rust library for solving travelling salesman problems (TSP) based on elkai (LKH 3)"
readme = "README.md"
repository = "https://github.com/HellOwhatAs/elkai-rs"
license-file = "LICENSE"
keywords = ["tsp", "atsp", "salesman", "LKH"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
num-traits = "0.2"

[build-dependencies]
cc = "1.0"
glob = "0.3.1"

[dev-dependencies]
text_io = "0.1.12"